--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 .flavor-text {
   font-weight: 600;
   padding-left: 4rem;
-  width: 90%;
+  width: 60ch;
 }
 
 .form > p {
@@ -112,23 +112,56 @@ form > h1 {
 label,
 input {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 input {
   height: 2rem;
   width: 15rem;
+  padding: 0.5rem 0.5rem;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border: 0.1rem solid #e5e7eb;
+  border-radius: 0.3rem;
+  outline: none;
+}
+
+label::after {
+  content: ' *';
+  color: red;
+  padding-left: 0.5ch;
+}
+
+input:user-invalid {
+  border: 0.1rem solid red;
+}
+
+input:valid {
+  border: 0.1rem solid green;
+}
+
+input:focus {
+  border: 0.1rem solid rgba(89, 109, 72);
+  box-shadow: 1px 1px 5px gray;
 }
 
 li {
   list-style: none;
   display: inline-block;
-  margin: 1rem 4rem 2rem 0;
+  padding: 1rem 5rem 0rem 0;
   font-size: 1rem;
 }
 
+li > span {
+  color: red;
+  visibility: hidden;
+  font-size: 0.8rem;
+}
+
 ul {
-  box-shadow: 0px 5px 5px lightgrey;
+  box-shadow: 0px 5px 5px lightgray;
+  padding-top: 0;
 }
 
 button {
@@ -137,11 +170,21 @@ button {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1rem;
   font-weight: 700;
-  background-color: #596d48;
+  background-color: rgb(89, 109, 72);
   color: white;
   border-radius: 0.5rem;
   border: none;
   box-shadow: 3px 3px 3px lightgray;
+}
+
+button:hover {
+  transform: scale(1.02);
+  cursor: pointer;
+}
+
+button:active {
+  transform: scale(0.98);
+  box-shadow: 2px 2px 2px lightgray;
 }
 
 form > p {
@@ -153,4 +196,13 @@ form > p a {
   text-decoration: none;
   color: #596d48;
   font-weight: 700;
+}
+
+::placeholder {
+  opacity: 1;
+  transition: opacity 0.25s;
+}
+
+*:focus::placeholder {
+  opacity: 0;
 }
